# Price-Action-Trading-Assistant

./: .editorconfig  .env.example  .gitignore  Makefile  README.md  pyproject.toml
docs/: ARCHITECTURE.md
docs/superpowers/plans/: 2026-05-29-web-implementation.md
docs/superpowers/specs/: 2026-05-29-web-interface-design.md
pa_assistant/: __init__.py  cli.py  config.py  logging.py  scheduler.py
pa_assistant/analysis/: __init__.py  context.py  divergence.py  liquidity.py  llm.py  profile.py  resample.py  stop_hunt.py  structure.py  volume.py  wyckoff.py  zones.py
pa_assistant/ingestion/: __init__.py  _http.py  binance.py  bitget.py  bybit.py  funding.py  gateio.py  okx.py
pa_assistant/notifications/: __init__.py  lark.py  telegram.py  wechat.py
pa_assistant/storage/: __init__.py  repository.py  schema.py  writers.py
pa_assistant/web/: __init__.py  app.py  schemas.py
pa_assistant/web/routes/: api.py  pages.py  ws.py
pa_assistant/web/static/css/: custom.css
pa_assistant/web/static/js/: chart.js  replay.js
pa_assistant/web/templates/: backtest.html  base.html  dashboard.html  liquidity.html
tests/: conftest.py
tests/unit/: test_binance_rest.py  test_cli.py  test_config.py  test_context.py  test_divergence.py  test_funding_aggregator.py  test_liquidity.py  test_logging.py  test_notifications.py  test_okx_bybit_rest.py  test_profile.py  test_proxy.py  test_resample.py  test_stop_hunt.py  test_storage.py  test_structure.py  test_volume.py  test_web.py  test_writers.py  test_wyckoff.py  test_zones.py
